; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/irda/extr_donauboe.c_toshoboe_start_DMA.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/irda/extr_donauboe.c_toshoboe_start_DMA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.toshoboe_cb = type { i32 }

@OBOE_ENABLEH = common dso_local global i32 0, align 4
@CONFIG0H_DMA_ON = common dso_local global i32 0, align 4
@OBOE_CONFIG0H = common dso_local global i32 0, align 4
@OBOE_ENABLEH_PHYANDCLOCK = common dso_local global i32 0, align 4
@PROMPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.toshoboe_cb*, i32)* @toshoboe_start_DMA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @toshoboe_start_DMA(%struct.toshoboe_cb* %0, i32 %1) #0 {
  %3 = alloca %struct.toshoboe_cb*, align 8
  %4 = alloca i32, align 4
  store %struct.toshoboe_cb* %0, %struct.toshoboe_cb** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @OBOE_ENABLEH, align 4
  %6 = call i32 @OUTB(i32 0, i32 %5)
  %7 = load i32, i32* @CONFIG0H_DMA_ON, align 4
  %8 = load i32, i32* %4, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @OBOE_CONFIG0H, align 4
  %11 = call i32 @OUTB(i32 %9, i32 %10)
  %12 = load i32, i32* @OBOE_ENABLEH_PHYANDCLOCK, align 4
  %13 = load i32, i32* @OBOE_ENABLEH, align 4
  %14 = call i32 @OUTB(i32 %12, i32 %13)
  %15 = load i32, i32* @PROMPT, align 4
  ret void
}

declare dso_local i32 @OUTB(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
